# InariKonKon

./: .gitignore  CMakeLists.txt  InariKonKon.sln  README.md  TestApp.cpp
InariKonKon-Editor/: InariKonKon-Editor.vcxproj  InariKonKon-Editor.vcxproj.filters  main.cpp
InariKonKon-Editor/include/InariKonKon/: EditorScene.hpp
InariKonKon-Editor/src/InariKonKon/: EditorScene.cpp
InariKonKon-Engine/: InariKonKon-Engine.vcxproj  InariKonKon-Engine.vcxproj.filters
InariKonKon-Engine/include/InariKonKon/: InariKonKon.hpp
InariKonKon-Engine/include/InariKonKon/Application/: Application.hpp  Scene.hpp  SceneManager.hpp
InariKonKon-Engine/include/InariKonKon/Graphics/: OpenGL.hpp  RenderTarget.hpp
InariKonKon-Engine/include/InariKonKon/Utilities/: Clock.hpp  Color.hpp  Log.hpp  Macros.hpp  (+3 more)
InariKonKon-Engine/src/InariKonKon/: InariKonKon.cpp
src/InariKonKon/: InariKonKon.cppm
src/InariKonKon/Core/: Core.cppm
src/InariKonKon/ECS/: ECS.cppm  EntityComponentSystem.cppm
src/InariKonKon/Grapics/: Shader.cppm
src/InariKonKon/Input/: Input.cppm  InputManager.cppm  InputState.cppm  Joystick.cppm  Keyboard.cppm  Mouse.cppm  PhysicalJoystick.cppm
src/InariKonKon/Math/: Angle.cppm  Mat.cppm  Math.cppm  Number.cppm  Quaternion.cppm  Rect.cppm  Rotation.cppm  Vec.cppm
src/InariKonKon/Utility/: Clamped.cppm  Clock.cppm  Color.cppm  DebugFeatures.cppm  Flag.cppm  FunctionTraits.cppm  Log.cppm  NonConstructible.cppm  NonCopyable.cppm  NonMovable.cppm  NumericCasts.cppm  Singleton.cppm  StableIndexVector.cppm  ThreadPool.cppm  Time.cppm  Utility.cppm  VectorMap.cppm
(+40 files in other folders)
